--- a/Mendota_Pinternal_all.Rmd
+++ b/Mendota_Pinternal_all.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Mendota_Pinternal"
+title: "Mendota_Pinternal_all"
 author: "Lauren A. Knose, ORISE-EPA"
 date: '2023-08-25'
 output: html_document
@@ -8,7 +8,7 @@ editor_options:
 ---
 
 The purpose of this program is to calculate the internal legacy P loading for Lake
-Mendota, WI, from entrainment. Internal Legacy Total P Load (kg-day-1) = [P_t]* Volepi_t/t.
+Mendota, WI, from entrainment. Internal Legacy Total P Load (kg-day-1) = [P_t]* (Vol_epi_t - Vol_epi,t-1)/t.
 
 # Step 1. Load dependent packages and data needed:
 
@@ -16,9 +16,10 @@ a) loading dependent packages...
 
 ```{r}
 library(ggplot2) #needed for plots
-library(dplyr) #needed for reformaing data
+library(dplyr) #needed for reformating data
 library(zoo) #needed to linearly interpolate missing values
 library(tidyverse) #needed for crossing function
+library(reshape2) #needed to reshape data from wide to long
 ```
 
 Packages loaded.
@@ -237,63 +238,97 @@ Two data frames joined.
 b) interpolating missing P concentration data...
 
 ```{r}
-
+IntP$TotP_mgL<- na.approx(IntP$TotP_mgL) #interpolates NAs
 ```
 
-# Step 7. Calculate internal legacy P loading through entrainment:
+P concentration data interpolated.
 
-a) match the total P concentration to the thermocline depth...
+c) calculating the internal legacy P loading by source (entrainment vs sediments
+adjacent to epilimnion), and total internal P loading.
 
 ```{r}
+t<- 14 #length between observations in days
 mgL_mgm3<- 1000/1 #conversion factor from mg/L to mg/M^3
 mg_kg<- 1/1000 #conversion factor from mg to kg
-IntP<- Int %>%
-  mutate(Ent_TotP_kgday= (TotP_mgL*mgL_mgm3*mg_kg)*Vol_epi_m3,
-         daynum=as.integer(format(sampledate, "%j")),
-         Yr=as.integer(format(sampledate, "%Y"))) %>%
-  filter(!is.na(Ent_TotP_kgday)) %>% #remove NAs
-  filter(Yr >= 2012 & Yr <=2018) %>% #filter for study period
-  filter(daynum >=195 & daynum <= 254) #filter for CyanoHAB season
+A_unstrat<- 13980000 #unstratified lake surface area, where sediments are 
+# directly adjacent to epilimnion in m^2
+Sed_P<- 2.4 # mg P/m2-day (average based on previous study by Stauffer 1987 who 
+# determined the average sediment release of P from sediments in contact with 
+#the epilimnion in Lake Mendota (original range was 1.2 to 3.5 mg P /m2-day), measured by sediment cores.
+IntP<- IntP %>%
+  mutate(Ent_TotP_kgday= (TotP_mgL*mgL_mgm3*mg_kg)*Vol_epi_m3/t, #calculates 
+        #internal P load from entrainment (stratified area)
+        Sed_TotP_kgday=(Sed_P*A_unstrat*mg_kg), #calculates internal P loading
+        #from sediments adjacent to epilimnion (unstratified area)
+        Int_TotP_kgday= Sed_TotP_kgday+Ent_TotP_kgday) #calculates total internal
+#legacy P loading
 ```
 
-# Step 8. Summarize and view the data:
+Internal legacy P load by source and total calculated.
+
+# Step 7. Summarize and view the data:
 
 a) summarizing average Ent P loading during the CyanoHAB season...
 ```{r}
-Int_all<- IntP %>%
+Int_yr<- IntP %>%
   group_by(Yr) %>%
-  summarize(total=sum()
-    mean=mean(Ent_TotP_kgday, na.rm=TRUE),
-            se=(sd(Ent_TotP_kgday, na.rm=TRUE)/sqrt(length(Ent_TotP_kgday))),
-            min=min(Ent_TotP_kgday, na.rm=TRUE),
-            max=max(Ent_TotP_kgday, na.rm=TRUE)
+  summarize(mean_entrain=mean(Ent_TotP_kgday, na.rm=TRUE),
+            se_entrain=(sd(Ent_TotP_kgday, na.rm=TRUE)/sqrt(length(Ent_TotP_kgday))),
+            min_entrain=min(Ent_TotP_kgday, na.rm=TRUE),
+            max_entrain=max(Ent_TotP_kgday, na.rm=TRUE),
+            mean_total=mean(Int_TotP_kgday, na.rm=TRUE),
+            se_total=(sd(Int_TotP_kgday, na.rm=TRUE)/sqrt(length(Int_TotP_kgday))),
+            min_total=min(Int_TotP_kgday, na.rm=TRUE),
+            max_total=max(Int_TotP_kgday, na.rm=TRUE)
             ) #calculate annual total P load
-Int_all
+Int_yr
 ```
 
-b) plot total P load for CyanoHAB season from entrainment...
+The average annual internal legacy total P load was `r mean(Int_yr$mean_total)` +- 
+`r (sd(Int_yr$se_total)/sqrt(length(Int_yr$se_total)))` kg/yr. 
+
+b) plot total P load for CyanoHAB season by source for each year...
 ```{r}
-ggplot(IntP, aes(x=daynum, y=Ent_TotP_kgday)) + #separate sources by fill colo
-  geom_point() +
+IntP_long<- melt(IntP, #the table you want to reshape wide to long
+               id.vars=c("sampledate"), #the column to use as unique id
+               measure.vars=c("Ent_TotP_kgday","Sed_TotP_kgday"), 
+               #the columns where values will be taken
+               variable.name="Source", #label the source of P loading
+               value.name="TotP_kgday" #label the value with units
+               )
+IntP_long$Source<-as.character(IntP_long$Source) #tell R character data held
+IntP_long$Source[IntP_long$Source=="Ent_TotP_kgday"] <- "entrainment"
+IntP_long$Source[IntP_long$Source=="Sed_TotP_kgday"] <- "adjacent sediments"
+
+IntP_long<- IntP_long %>%
+  mutate(Yr=format(sampledate, "%Y") #add year back in data frame
+         ) %>%
+  group_by(Yr, Source) %>% #for each year and each source
+  summarize(TotP_kgday=sum(TotP_kgday)) #sum up all the TotP_kgday
+
+ggplot(subset(IntP_long, Yr<=2018), aes(x=Yr, y=TotP_kgday, 
+                             fill=Source)) + #separate sources by fill color
+  geom_bar(position="stack", stat="identity", color="black") + #stacked bar graph
+  scale_fill_manual(values=c("grey", "black")) + #entrain = grey, sed=black
   theme_classic(base_size=12) +
-  labs(x="Year", y="Total P loading from Entrainment (kg/day)") 
+  labs(x="Year", y="Total P loading (kg/yr)") 
 ```
 
 Total P load by source for each year plotted.
 
-
-b) calculating average annual total P load for CyanoHAB season...
+b) calculate average daily total P load from entrainment for CyanoHAB season...
 
 ```{r}
-IntP_yravg<- IntP %>%
-  filter(Source=="total") %>% #for the total external P load
-  group_by(Yr) %>%
-  summarize(sum=sum(Ent_TotP_kgday))
-IntP_yravg
+IntP_dayavg<- IntP %>%
+  summarize(mean_ent=mean(Ent_TotP_kgday, na.rm=TRUE), #calculate mean
+            se_ent=(sd(Ent_TotP_kgday, na.rm=TRUE)/sqrt(length(Ent_TotP_kgday))),
+            min_ent=min(Ent_TotP_kgday, na.rm=TRUE),
+            max_ent=max(Ent_TotP_kgday, na.rm=TRUE)
+            )
+IntP_dayavg
 ```
 
-The average annual total P load was `r mean(IntP_yravg$sum)` +- 
-`r (sd(IntP_yravg$sum)/sqrt(length(IntP_yravg$sum)))` kg/yr. 
+Average daily P load from entrainment calculated.
 
 # Step 9. Save the data as a new data file:
 
